@@ -1,7 +1,7 @@
 Package: glmmADMB
-Version: 0.7.2.2
+Version: 0.7.2.3
 Revision: $Revision$
-Date: 2011-01-06
+Date: $ Date $
 Title: Generalized Linear Mixed Models Using AD Model Builder
 Author: Hans Skaug <Hans.Skaug@mi.uib.no>, Dave Fournier <otter@otter-rsch.com>,
   Anders Nielsen <andersn@hawaii.edu>, Arni Magnusson <arnima@hafro.is>, and Ben
