@@ -186,7 +186,7 @@ The following object(s) are masked from ‘package:stats’:
 > 
 > 
 > ## POISSON/identity link
-> dd <- data.frame(y=rpois(20,lambda=10))
+> dd <- data.frame(y=rpois(20,lambda=10),f=factor(rep(1:5,each=4)))
 > g5 <- glmmadmb(y~1,data=dd,
 +          start=list(fixed=10),
 +          family="poisson",link="identity")
@@ -194,7 +194,14 @@ Estimated covariance matrix may not be positive definite
  10.25
 Estimated covariance matrix may not be positive definite
  10.25
+> g5R <- glmmadmb(y~1+(1|f),data=dd,
++          start=list(fixed=10),
++          family="poisson",link="identity")
+> 
 > coef(g5)
+(Intercept) 
+      10.25 
+> coef(g5R)
 (Intercept) 
       10.25 
 > 
@@ -216,4 +223,4 @@ Estimated covariance matrix may not be positive definite
 > 
 > proc.time()
    user  system elapsed 
- 28.565   8.008  39.693 
+ 14.792   5.964  35.532 
